fix: chart overflow issue when filter open

--- a/src/scss/filejet-scss/org-chart/_org-chart.scss
+++ b/src/scss/filejet-scss/org-chart/_org-chart.scss
@@ -13,7 +13,7 @@
 }
 
 #tree{
-    height: 75vh !important;
+    height: 75vh;
     &>svg {
         height: 75vh;
         background-color: #F3F5F8;
